--- a/zxcvbn-core-list-builder/zxcvbn-core-list-builder.csproj
+++ b/zxcvbn-core-list-builder/zxcvbn-core-list-builder.csproj
@@ -2,15 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Zxcvbn.ListBuilder</RootNamespace>
     <IsPackable>false</IsPackable>
+    <IsPublishable>False</IsPublishable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
 </Project>
